--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.14.0
 bcrypt==4.2.1
 bidict==0.23.1
 blinker==1.9.0
+Brotli==1.1.0
+cachelib==0.13.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -11,11 +13,14 @@ dnspython==2.7.0
 eventlet==0.40.0
 Flask==3.1.0
 Flask-Bcrypt==1.0.1
+Flask-Caching==2.3.1
+Flask-Compress==1.18
 Flask-Ext==0.1
+Flask-HTTPAuth==4.8.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
-
+flask-profiler==1.8.1
 Flask-SQLAlchemy==3.1.1
 Flask-WhooshAlchemy==0.56
 Flask-WTF==1.2.2
@@ -30,7 +35,6 @@ Jinja2==3.1.5
 kiwisolver==1.4.8
 Mako==1.3.8
 MarkupSafe==3.0.2
-
 narwhals==1.31.0
 numpy==2.2.4
 packaging==24.2
@@ -42,8 +46,10 @@ python-dateutil==2.9.0.post0
 python-engineio==4.12.1
 python-socketio==5.13.0
 pytz==2025.1
+pyzstd==0.17.0
 requests==2.32.3
 simple-websocket==1.1.0
+simplejson==3.20.1
 six==1.17.0
 SQLAlchemy==2.0.37
 tornado==6.4.2
