--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
 plotly==6.0.1
+psycopg2-binary==2.9.10
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-engineio==4.12.1
