--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ cachelib==0.13.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+cloudinary==1.44.1
 contourpy==1.3.1
 cycler==0.12.1
 dnspython==2.7.0
+dotenv==0.9.9
 eventlet==0.40.0
 Flask==3.1.0
 Flask-Bcrypt==1.0.1
@@ -44,6 +46,7 @@ plotly==6.0.1
 psycopg2-binary==2.9.10
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 python-engineio==4.12.1
 python-socketio==5.13.0
 pytz==2025.1
