--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ blinker==1.9.0
 Brotli==1.1.0
 cachelib==0.13.0
 certifi==2025.1.31
+cffi==2.0.0
 charset-normalizer==3.4.1
 click==8.1.8
 cloudinary==1.44.1
 contourpy==1.3.1
+cryptography==46.0.3
 cycler==0.12.1
 dnspython==2.7.0
 dotenv==0.9.9
@@ -23,6 +25,7 @@ Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 flask-profiler==1.8.1
+Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 Flask-WhooshAlchemy==0.56
 Flask-WTF==1.2.2
@@ -44,14 +47,17 @@ pandas==2.2.3
 pillow==11.1.0
 plotly==6.0.1
 psycopg2-binary==2.9.10
+pycparser==2.23
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-engineio==4.12.1
+python-http-client==3.3.7
 python-socketio==5.13.0
 pytz==2025.1
 pyzstd==0.17.0
 requests==2.32.3
+sendgrid==6.12.5
 simple-websocket==1.1.0
 simplejson==3.20.1
 six==1.17.0
