--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
+    "@capacitor/cli": "^8.0.2",
+    "@capacitor/core": "^8.0.2",
     "pace-js": "^1.2.4"
-  }
+  },
+  "name": "smarteats",
+  "version": "1.0.0",
+  "description": "SmartEats",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pitech09/SmartEats.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pitech09/SmartEats/issues"
+  },
+  "homepage": "https://github.com/pitech09/SmartEats#readme"
 }
